[tool.poetry]
name = "boilerplate-time-calculator"
version = "0.1.0"
description = ""
authors = ["iRatatuii <andreikarpenkin123@gmail.com>"]
readme = "README.md"
packages = [{include = "boilerplate_time_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
